[KOGITO-1248] Generate onEntry onExit code
Signed-off-by: Ruben Romero Montes <rromerom@redhat.com>